AddTodo component added w tests

--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "chai": "^3.5.0",
     "copyfiles": "^0.2.1",
     "enzyme": "^2.3.0",
+    "eslint": "^3.1.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.11.1",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^5.2.2",
     "karma": "^0.13.22",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "^5.0.5",
@@ -46,7 +51,7 @@
     "onchange": "^2.4.0",
     "react": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
-    "react-bootstrap": "^0.29.4",
+    "react-bootstrap": "^0.30.0-rc.1",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "sourcemap": "^0.1.0",
