--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "karma start",
     "test:mocha": "mocha test/**/*.test.jsx --compilers jsx:babel-require",
-    "build:js": "browserify -t [ babelify ] dev/webclient/main.jsx -o dist/app/app.js",
+    "build:js": "browserify -t [ babelify ] dev/webclient/main.jsx -o dist/app.js",
     "watch:js": "onchange 'dev/**/*.jsx' -v -- npm run build:js",
     "add:bootstrap": "copyfiles -u 4 node_modules/bootstrap/dist/css/*.css dist/styles/includes",
     "add:includes": "copyfiles -u 1 'dev/styles/includes/**/*.css' dist",
@@ -16,13 +16,16 @@
     "build:html": "copyfiles -u 1 'dev/**/*.html' dist",
     "watch:html": "onchange 'dev/**/*.html' -- npm run build:html",
     "build": "npm run build:html && npm run build:css && npm run build:js",
-    "watch": "npm run build && npm run start & npm run watch:js & npm run watch:html & npm run watch:css",
-    "start": "node server.js"
+    "watch": "npm run build && npm run watch:js & npm run watch:html & npm run watch:css",
+    "start": "node server.js",
+    "budo": "budo ./dev/webclient/main.jsx:app.js --dir ./dist --live '*.{css,html}' --open -- -t [ babelify ] -p livereactload -o dist/app.js",
+    "budo:watch": "npm run watch:html & npm run watch:css"
   },
   "author": "gumatt",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.9.0",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-airbnb": "^2.0.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
@@ -31,6 +34,7 @@
     "babelify": "^7.3.0",
     "bootstrap": "^3.3.6",
     "browserify": "^13.0.1",
+    "budo": "^9.0.0",
     "chai": "^3.5.0",
     "copyfiles": "^0.2.1",
     "enzyme": "^2.3.0",
@@ -47,11 +51,13 @@
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.4",
     "karma-sourcemap-loader": "^0.3.7",
+    "livereactload": "^3.0.0",
     "mocha": "^2.5.3",
     "onchange": "^2.4.0",
     "react": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
     "react-bootstrap": "^0.30.0-rc.1",
+    "react-proxy": "^1.1.8",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "sourcemap": "^0.1.0",
