--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": ["es2015", "react", "stage-0", "airbnb"],
+  "plugins": ["transform-decorators-legacy", "transform-class-properties"],
   "env": {
     "development": {
       "plugins": [
