--- a/package.json
+++ b/package.json
@@ -5,37 +5,42 @@
   "main": "/dist/webclient.js",
   "scripts": {
     "test": "karma start",
-    "test:mocha": "mocha test/**/*.test.jsx --compilers jsx:babel-require",
+    "test:mocha": "mocha 'test/**/*.spec.jsx' --compilers jsx:babel-require",
     "build:js": "browserify -t [ babelify ] dev/webclient/main.jsx -o dist/app.js",
     "watch:js": "onchange 'dev/**/*.jsx' -v -- npm run build:js",
     "add:bootstrap": "copyfiles -u 4 node_modules/bootstrap/dist/css/*.css dist/styles/includes",
-    "add:includes": "copyfiles -u 1 'dev/styles/includes/**/*.css' dist",
+    "add:includes": "copyfiles -u 1 'dev/styles/includes/**/*.css' dist && copyfiles -u 1 'dev/styles/fonts/*.*' dist",
     "compile:stylus": "stylus dev/styles/app.styl -o dist/styles/app.css",
     "build:css": "npm run add:bootstrap && npm run add:includes && npm run compile:stylus",
     "watch:css": "onchange 'dev/styles/**/*.styl' -- npm run build:css",
+    "watch:styl": "onchange 'dev/styles/**/*.styl' -- npm run compile:stylus",
     "build:html": "copyfiles -u 1 'dev/**/*.html' dist",
     "watch:html": "onchange 'dev/**/*.html' -- npm run build:html",
     "build": "npm run build:html && npm run build:css && npm run build:js",
     "watch": "npm run build && npm run watch:js & npm run watch:html & npm run watch:css",
     "start": "node server.js",
     "budo": "budo ./dev/webclient/main.jsx:app.js --dir ./dist --live '*.{css,html}' --open -- -t [ babelify ] -p livereactload -o dist/app.js",
-    "budo:watch": "npm run watch:html & npm run watch:css"
+    "budo:watch": "npm run watch:html & npm run watch:styl"
   },
   "author": "gumatt",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.9.0",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-airbnb": "^2.0.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.13.0",
     "babel-require": "^1.0.1",
     "babelify": "^7.3.0",
     "bootstrap": "^3.3.6",
     "browserify": "^13.0.1",
     "budo": "^9.0.0",
     "chai": "^3.5.0",
+    "classnames": "^2.2.5",
     "copyfiles": "^0.2.1",
     "enzyme": "^2.3.0",
     "eslint": "^3.1.1",
@@ -52,6 +57,10 @@
     "karma-mocha-reporter": "^2.0.4",
     "karma-sourcemap-loader": "^0.3.7",
     "livereactload": "^3.0.0",
+    "lodash": "^4.15.0",
+    "mobx": "^2.5.0",
+    "mobx-react": "^3.5.5",
+    "mobx-react-devtools": "^4.2.5",
     "mocha": "^2.5.3",
     "onchange": "^2.4.0",
     "react": "^15.1.0",
